tests/transpiler/x/zig/var_assignment.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/var_assignment.zig:7:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/var_assignment.zig:4:15: note: function cannot return an error
