tests/transpiler/x/zig/var_assignment.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:58 +0000
const std = @import("std");

pub fn main() void {
    var x: i64 = 1;
    x = 2;
    try std.io.getStdOut().writer().print("{any}\n", .{x});
}
